# android-gemma-app

./: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: android-ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/gemmaapp/: ChatViewModel.kt  InferenceEngine.kt  MainActivity.kt
app/src/main/java/com/example/gemmaapp/ui/: ChatScreen.kt
app/src/main/java/com/example/gemmaapp/ui/theme/: Theme.kt
app/src/main/res/values/: strings.xml  themes.xml
llama/: build.gradle.kts
llama/src/main/cpp/: CMakeLists.txt
scripts/: download_model.sh
